Libraries/GTK/src/gtkextra/gtkplot.h

typedef struct _GtkPlot		GtkPlot;
typedef struct _GtkPlotAxis 	GtkPlotAxis;
typedef struct _GtkPlotText 	GtkPlotText;
typedef struct _GtkPlotLine 	GtkPlotLine;
typedef enum
{
  GTK_PLOT_SCALE_LINEAR	,
  GTK_PLOT_SCALE_LOG10
} GtkPlotScale;
typedef enum
{
  GTK_PLOT_AXIS_X	,
  GTK_PLOT_AXIS_Y	,
  GTK_PLOT_AXIS_Z	,
} GtkPlotOrientation;
typedef enum
{
  GTK_PLOT_LABEL_FLOAT	,
  GTK_PLOT_LABEL_EXP	,
  GTK_PLOT_LABEL_POW
} GtkPlotLabelStyle;
void		gtk_plot_set_background_pixmap	(GtkPlot *plot,
						 GdkPixmap *pixmap);
void		gtk_plot_set_transparent	(GtkPlot *plot,
						 gboolean transparent);
gboolean	gtk_plot_is_transparent		(GtkPlot *plot);
void	 	gtk_plot_reflect_x		(GtkPlot *plot,
						 gboolean reflect);
void	 	gtk_plot_reflect_y		(GtkPlot *plot,
						 gboolean reflect);
gboolean 	gtk_plot_is_x_reflected		(GtkPlot *plot);
gboolean 	gtk_plot_is_y_reflected		(GtkPlot *plot);
void		gtk_plot_text_get_size		(const gchar *text,
						 gint angle,
						 const gchar *font_name,
						 gint font_size,
						 gint *width, gint *height,
						 gint *ascent, gint *descent);
void		gtk_plot_text_get_area		(const gchar *text,
						 gint angle,
						 GtkJustification just,
						 const gchar *font_name,
						 gint font_size,
						 gint *x, gint *y,
						 gint *width, gint *height);
void            gtk_plot_draw_line		(GtkPlot *plot,
                			         GtkPlotLine line,
                   				 gdouble x1, gdouble y1,
						 gdouble x2, gdouble y2);
void 		gtk_plot_draw_text		(GtkPlot *plot,
                   				 GtkPlotText text);
GtkObject*	gtk_plot_axis_new		(GtkPlotOrientation orientation);
void		gtk_plot_axis_set_break		(GtkPlotAxis *axis,
						 gdouble min, gdouble max,
						 gdouble step_after,
						 gint nminor_after,
                                                 GtkPlotScale scale_after,
						 gdouble pos);
void		gtk_plot_axis_remove_break	(GtkPlotAxis *axis);
void		gtk_plot_axis_set_labels_style	(GtkPlotAxis *axis,
						 GtkPlotLabelStyle style,
						 gint precision);
void		gtk_plot_axis_set_labels_offset	(GtkPlotAxis *axis,
						 gint offset);
gint		gtk_plot_axis_get_labels_offset	(GtkPlotAxis *axis);
void		gtk_plot_axis_set_labels_suffix (GtkPlotAxis *axis,
						 const gchar *text);
void		gtk_plot_axis_set_labels_prefix (GtkPlotAxis *axis,
						 const gchar *text);
gchar *		gtk_plot_axis_get_labels_suffix (GtkPlotAxis *axis);
gchar *		gtk_plot_axis_get_labels_prefix (GtkPlotAxis *axis);
void		gtk_plot_grids_set_on_top		(GtkPlot *plot,
							 gboolean on_top);
gboolean	gtk_plot_grids_on_top			(GtkPlot *plot);